update changes on coolor

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                         <img src="./Assets/homepage_hero_palettes.png" alt="">
                     </div>
                     <div class="right2">
-                        <img src="" alt="">
+                        <img src="./Assets/IMG-20250410-WA0034.jpg" alt="">
+                    </div>
+                    <div class="whatsapp">
+                        <img src="./Assets/whatsapp.png" alt="whatsapp">
                     </div>
     </div>
 </section>
@@ -50,8 +53,10 @@
 
 
 <div class="screen-2">
+    <main class="box-5">
+        <a href="">
     <div class="apps">
-       <span class="default"> <img src="" alt="">
+       <span class="default"> <img src="./Assets/apple-logo.png" alt="">
         <h2>iOs App</h2>
         <p>Create, browse and save palettes on the go.</p>
     </span>
@@ -59,8 +64,10 @@
         <h1>View on the App Store</h1>
     </span>
     </div>
+</a>
+<a href="">
     <div class="apps">
-        <span class="default"><img src="" alt="">
+        <span class="default"><img src="./Assets/social.png" alt="">
         <h2>Andriod App</h2>
         <p>Thousands of palettes in your pocket.</p>
     </span>
@@ -68,8 +75,10 @@
         <h1>View on the Play Store</h1>
     </span>
     </div>
+</a>
+<a href="">
     <div class="apps">
-       <span class="default"> <img src="" alt="">
+       <span class="default"> <img src="./Assets/figma.png" alt="">
         <h2>Figma Plugins</h2>
         <p>All palettes right in your workspace.</p>
     </span>
@@ -77,8 +86,10 @@
         <h1>Install now</h1>
     </span>
     </div>
+</a>
+<a href="">
     <div class="apps">
-        <span class="default"><img src="" alt="">
+        <span class="default"><img src="./Assets/chrome.png" alt="">
         <h2>Chrome Extension </h2>
         <p>Get and edit a palettes every new tab.</p>
     </span>
@@ -86,8 +97,10 @@
         <h1>Add to Chrome</h1>
     </span>
     </div>
+</a>
+<a href="">
     <div class="apps">
-        <span class="default"><img src="" alt="">
+        <span class="default"><img src="./Assets/adobe.png" alt="">
         <h2>Adobe Extension</h2>
         <p>Use coolors with your favourite tools.</p>
     </span>
@@ -95,21 +108,76 @@
         <h1>Dowload</h1>
     </span>
         </div>
+    </a>
+    </main>
         <div class="head3">
             <h2>Used by 5 + million designers and by top companies</h2>
         </div>
 
         <div class="icons">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="./Assets/icons8-disney-50.png" alt="">
+            <img src="./Assets/brand-dreamworks.svg" alt="">
+            <img src="./Assets/865203.png" alt="">
+            <img src="./Assets/netflix.png" alt="">
+            <img src="./Assets/airbnb.png" alt="">
+            <img src="./Assets/dropbox.png" alt="">
+            <img src="./Assets/hasbro-logo-removebg-preview.png" alt="">
+            <img src="./Assets/ubisoft_icon_130803.png" alt="">
+            <img src="./Assets/ea.svg" alt="">
+            <img src="./Assets/apple-logo.png" alt="">
+            <a href="" class="windows"><img src="./Assets/icons8-microsoft-50.png" alt=""></a>
+        </div>
+    </div>
+    <div class="footer">
+        <div><h3>Tools</h3>
+            <a href=""><p>Generate your palettes
+            </p>
+            <p>Explore popular palettes</p>
+            <p>Extract palatte from image</p>
+            <p>Contrast checker</p>
+            <p>Preview palettes on design</p>
+            <p>Recolor ypur own design</p>
+            <p>Color picker</p>
+            <p>Browse free fonts</p>
+        </a>
+        </div>
+        <div><h3>More</h3>
+            <a href=""><p>List of colors
+            </p>
+            <p>Browse gradients</p>
+            <p>Create a gradient</p>
+            <p>Make a gradient palette</p>
+            <p>Image converter</p>
+            <p>Create a collage</p>
+            <p>Font Generator</p>
+        </a>
+        </div>
+        <div><h3>Jobs</h3>
+            <a href=""><p>Find your next job
+            </p>
+            <p>Post a job</p>
+            <br>
+            <h3>Apps</h3>
+            <p>iOS App</p>
+            <p>Andriod App</p>
+            <p>Figma Plugin</p>
+            <p>Adobe Extension</p>
+            <p>Instagram page</p>
+        </a>
+        </div>
+        <div><h3>Company</h3>
+            <a href=""><p>Pricing
+            </p>
+            <p>License</p>
+            <p>Terms of service</p>
+            <p>Privacy policy</p>
+            <p>Cookie policy</p>
+            <p>Manage cookies</p>
+            <p>Help center</p>
+            <p>Advertise</p>
+            <p>Affiliate</p>
+            <p>Contact</p>
+        </a>
         </div>
     </div>
 </body>
